--- a/css/screen.css
+++ b/css/screen.css
@@ -201,6 +201,11 @@ a:focus {
     display: flow-root;
 }
 
+.o-row—neutral-x-light {
+    background-color: #F7F7F7;
+}
+
+
 
 /* size modifiers */
 
