--- a/css/screen.css
+++ b/css/screen.css
@@ -244,6 +244,10 @@ a:focus {
     max-width: 56.4em; /* 1128 / 20px */
 }
 
+.o-gradient {
+    background: linear-gradient(to top right, #5051DB 0%, #3887F7 100%);
+    color: white;
+}
 
 /*
     Objects: List
@@ -583,6 +587,7 @@ a:focus {
     Small cta link with custom animation
 */
 
+
 .c-link-cta {
     position: relative;
     display: inline-block;
@@ -591,7 +596,6 @@ a:focus {
     line-height: 24px;
     font-weight: 400;
     padding: 4px 0;
-    transition: color .175s ease-in;
 }
 
 .c-link-cta,
@@ -599,23 +603,6 @@ a:focus {
 .c-link-cta:active {
     color: #7373F5;
 }
-
-.c-link-cta--inverse::after {
-    content: "";
-    display: block;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    height: 1px;
-    width: 100%;
-    background-color: #fff;
-    transform: scaleX(0.5);
-    transform-origin: left;
-    transition-property: transform background-color;
-    transition-duration: 0.175s;
-    transition-timing-function: ease-in;
-}
-
 
 .c-link-cta::after {
     content: "";
@@ -626,20 +613,11 @@ a:focus {
     height: 1px;
     width: 100%;
     background-color: #7373F5;
-    transform: scaleX(0.5);
+    transform: scaleX(.5);
     transform-origin: left;
-    transition-property: transform background-color;
-    transition-duration: 0.175s;
-    transition-timing-function: ease-in;
-}
-
-.c-link-cta--inverse:hover {
-    color: #3E3EA8;
-}
-
-.c-link-cta--inverse:hover::after {
-    transform:scaleX(1);
-    background-color: #3E3EA8;
+    transition-property: transform, background-color;
+    transition-duration: .175s;
+    transition-timing-function: ease;
 }
 
 .c-link-cta:hover {
@@ -647,8 +625,22 @@ a:focus {
 }
 
 .c-link-cta:hover::after {
-    transform:scaleX(1);
+    transform: scaleX(1);
     background-color: #3E3EA8;
+}
+
+/* inversed */
+
+.c-link-cta--inverse,
+.c-link-cta--inverse:visited,
+.c-link-cta--inverse:active,
+.c-link-cta--inverse:hover {
+    color: #fff;
+}
+
+.c-link-cta--inverse::after,
+.c-link-cta--inverse:hover::after {
+    background-color: #fff;
 }
 
 /*------------------------------------*\
